# ResNex-AI

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  latex-server.js  next.config.js  package-lock.json  package.json  tailwind.config.js
app/: page.tsx  providers.tsx
backend/: Dockerfile  README.md  pyproject.toml  worker.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: agents.py  chat.py  discover.py  documents.py  health.py  jobs.py  reports.py  search.py  tasks.py  workspaces.py
backend/app/core/: __init__.py  config.py  queue.py
backend/app/db/: models.py  session.py
backend/app/jobs/: __init__.py  ingest.py  tasks.py
backend/app/schemas/: chat.py  document.py  project_state.py  report.py  task.py  workspace.py
backend/app/services/: __init__.py  arxiv_service.py  chunker.py  guardrails.py  llm.py  pdf_parser.py  semantic_scholar_service.py
backend/app/services/agents/: chat_summarizer.py  comparison.py  gapfinder.py  planner.py  prompt_registry.py  qa.py  summarizer.py  writer.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_api_health.py  test_chat_agents.py  test_discover.py  test_guardrails.py  test_prompt_registry.py  test_workspace_flow.py
docs/: SPEC.md  SPEC_LATEX.md  SPEC_LATEX_TEMPLATES.md  WORKSPACE_DOCUMENTATION.md  imposter-syndrome-spec.md
frontend/: Dockerfile
lib/: auth.ts  embeddings.ts  firebase.ts  guardrails.ts  latex-assets.ts  prisma.ts  semanticSearch.ts  uploadthingClient.ts
socket-server/: package-lock.json  package.json
store/: agentStore.ts  (+2 more)
(+209 files in other folders)
